added init script to pull in dependencies
using jQuery v1.3.2 instead of latest version, for now
using curl instead of wget for OS X compatibility

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<i>loading...</i>
 	</div>
 
-	<script src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js" type="text/javascript"></script> <!-- XXX: don't use Google CDN -->
+	<script src="scripts/jquery.min.js" type="text/javascript"></script>
 	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
 </body>
