--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 	</script>
 	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
+	<script src="scripts/config.js" type="text/javascript"></script>
 	<script type="text/javascript">
-		// XXX: DEBUG
 		jQuery(function() {
-			jQuery.TiddlyRecon("#explorer", "http://tiddlyweb.peermore.com/wiki");
+			jQuery.TiddlyRecon("#explorer", tiddlyweb.host);
 		});
 	</script>
 </body>
