--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script type="text/javascript">
 		jQuery.noConflict();
 	</script>
+	<script src="scripts/jquery-json.min.js" type="text/javascript"></script>
 	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
 	<script src="scripts/config.js" type="text/javascript"></script>
