--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<title>TiddlyRecon</title>
 	<link rel="stylesheet" type="text/css" href="styles/main.css">
+	<link rel="stylesheet" type="text/css" href="styles/widgets.css">
 </head>
 
 <body>
@@ -16,6 +17,7 @@
 	<script type="text/javascript">
 		jQuery.noConflict();
 	</script>
+	<script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
 	<script src="scripts/jquery-json.min.js" type="text/javascript"></script>
 	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
