--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 	<script src="scripts/jquery-json.min.js" type="text/javascript"></script>
 	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
+	<script src="scripts/widgets.js" type="text/javascript"></script>
 	<script src="scripts/config.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		jQuery(function() {
