--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 	<script type="text/javascript">
 		jQuery.noConflict();
 	</script>
-	<script src="scripts/jquery-ui.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery-ui.core.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery-ui.resizable.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery-ui.draggable.min.js" type="text/javascript"></script>
+	<script src="scripts/jquery-ui.dialog.min.js" type="text/javascript"></script>
 	<script src="scripts/jquery-json.min.js" type="text/javascript"></script>
 	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
