--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 		<i>loading...</i>
 	</div>
 
+	<!-- templates -->
+
+	<script type="text/html" id="template_status">
+		<dl id="status">
+			<dt>user</dt>
+			<dd> <%= username %> </dd>
+			<dt>server</dt>
+			<dd>
+				<a href="<%= host %>">
+					<%= host %>
+				</a>
+			</dd>
+		</dl>
+	</script>
+
+	<!-- functionality -->
+
 	<script src="scripts/jquery.min.js" type="text/javascript"></script>
 	<script type="text/javascript">
 		jQuery.noConflict();
