--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 		jQuery.noConflict();
 	</script>
 	<script src="scripts/jquery-json.min.js" type="text/javascript"></script>
-	<script src="scripts/chrjs/main.js" type="text/javascript"></script>
+	<script src="scripts/chrjs.js" type="text/javascript"></script>
 	<script src="scripts/main.js" type="text/javascript"></script>
 	<script src="scripts/util.js" type="text/javascript"></script>
 	<script src="scripts/config.js" type="text/javascript"></script>
