applied templating to bag/recipe containers

--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,12 @@
 		</dl>
 	</script>
 
+	<script type="text/html" id="template_entity">
+		<div class="entity">
+			<h3> <%= name %> </h3>
+		</div>
+	</script>
+
 	<!-- functionality -->
 
 	<script src="scripts/jquery.min.js" type="text/javascript"></script>
