--- a/src/index.html
+++ b/src/index.html
@@ -33,6 +33,20 @@
 		</div>
 	</script>
 
+	<script type="text/html" id="template_collection">
+		<div id="<%= id %>" class="collection">
+			<h2> <%= title %> </h2>
+			<ul class="listing">
+				<% for(var i = 0; i < items.length; i++) { %>
+				<li>
+					<a href="#"> <%= items[i] %> </a>
+				</li>
+				<% } %>
+			</ul>
+
+		</div>
+	</script>
+
 	<!-- functionality -->
 
 	<script src="scripts/jquery.min.js" type="text/javascript"></script>
