fixed href on collection items
For the moment, these are buttons rather than links.
However, it would be awesome if fragment IDs were interpreted to allow
for permalinks.

--- a/src/index.html
+++ b/src/index.html
@@ -39,11 +39,10 @@
 			<ul class="listing">
 				<% for(var i = 0; i < items.length; i++) { %>
 				<li>
-					<a href="#"> <%= items[i] %> </a>
+					<a href="javascript:;"> <%= items[i] %> </a>
 				</li>
 				<% } %>
 			</ul>
-
 		</div>
 	</script>
 
